--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -16,9 +16,9 @@ article {
   border-radius: 10px;
   background: #f7f7f7;
   margin-top: 30px;
-  max-height: 450px;
+  height: 500px;
   overflow-y: scroll;
-  padding: 10px;
+  padding: 60px;
 }
 
 h1 {
@@ -27,6 +27,13 @@ h1 {
   font-size: 1.7em;
   text-align: left;
   color: #232323;
+}
+
+h2 {
+  text-align: center;
+  text-decoration: underline;
+  color: #232323;
+  font-size: 32px;
 }
 
 .barraBusqueda .inputBuscador {
@@ -66,7 +73,7 @@ h1 {
   display: flex;
   justify-content: center;
   gap: 20px;
-  max-width: 800px;
+  max-width: 100%;
   margin-top: 30px;
 }
 
