--- a/src/components/Lista.astro
+++ b/src/components/Lista.astro
@@ -1,6 +1,6 @@
 ---
 import Card from './Card.astro'
-import data from '../mocks/data.json'
+import * as data from '../mocks/data.json'
 ---
 
 <ul class='clases'>
