--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,9 @@ import Lista from '../components/Lista.astro'
 
 <style>
   body {
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
   }
 
   nav {
@@ -55,7 +56,7 @@ import Lista from '../components/Lista.astro'
   article {
     border-radius: 10px;
     background: #f7f7f7;
-    height: 400px;
+    height: 300px;
     overflow-y: scroll;
     padding-block: 20px;
     padding-inline: 60px;
@@ -65,7 +66,7 @@ import Lista from '../components/Lista.astro'
   }
 
   h2 {
-    margin-left: 2rem;
+    text-align: center;
     color: #232323;
     font-size: 26px;
     text-transform: uppercase;
@@ -73,7 +74,7 @@ import Lista from '../components/Lista.astro'
   }
 
   hr {
-    width: 90%;
+    width: 80%;
     opacity: 0.5;
   }
 
@@ -89,11 +90,7 @@ import Lista from '../components/Lista.astro'
 
   @media screen and (min-width: 768px) {
     article {
-      height: 800px;
-    }
-
-    h2 {
-      margin-left: 4rem;
+      height: 500px;
     }
 
     img {
@@ -108,11 +105,7 @@ import Lista from '../components/Lista.astro'
 
   @media screen and (min-width: 1024px) {
     article {
-      height: 600px;
-    }
-
-    h2 {
-      margin-left: 6rem;
+      height: 500px;
     }
   }
 </style>
